Add profile pages, Tradeport marketplace, and media player
Features:
- Profile page with tabbed sidebar (Overview, Records, Media, Upload, Bid, Knowledge)
- Tradeport marketplace integration for SuiNS names
  - Display listings and current bids
  - Server-side bid transaction building via Tradeport SDK
  - Direct bid placement with wallet signing
- Media player for Walrus-hosted audio/video (play-{blobId}.sui.ski)
- Upload handler for Walrus blob storage
- Transaction viewer (/tx/{digest})
- Walrus site resolver for decentralized websites
- Grokipedia/Dictionary knowledge lookups
- Registration queue bid system

UI improvements:
- Expiry badge colors (red ≤7d, yellow ≤90d, green ≤365d, blue gradient >1yr)
- Owner display with primary SuiNS name reverse lookup
- QR code toggle on identity card
- Mobile-responsive sidebar navigation

Technical:
- nodejs_compat flag for Tradeport SDK compatibility
- Lazy SDK loading to avoid Cloudflare Workers global scope issues
- Enhanced landing page with feature cards

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "sui-ski-gateway"
 main = "src/index.ts"
 compatibility_date = "2025-01-15"
+compatibility_flags = ["nodejs_compat"]
 
 # Wildcard route for *.sui.ski
 routes = [
@@ -13,9 +14,14 @@ routes = [
 SUI_NETWORK = "mainnet"
 SUI_RPC_URL = "https://fullnode.mainnet.sui.io:443"
 WALRUS_NETWORK = "mainnet"
+TRADEPORT_API_URL = "https://api.indexer.xyz/graphql"
+
+# Secrets are set via `wrangler secret put ...` for production or a local `.env`
+# for development. Required keys:
+#   TRADEPORT_USER
+#   TRADEPORT_API_KEY
 
 # KV namespace for caching resolved names
 [[kv_namespaces]]
 binding = "CACHE"
-id = "1118ef20efd84d7ca99de7e12f586ef4"
-preview_id = "fdae273a99134a7988a69db4a7a0da6c"
+id = "c0054cf22c6a4daa99cb36347fa5229c"
