--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "tail": "wrangler tail",
     "test": "bun test",
     "test:watch": "bun test --watch",
+    "set:contenthash": "bun run scripts/set-suins-contenthash.ts",
     "typecheck": "tsc --noEmit",
     "lint": "biome check src/",
     "lint:fix": "biome check --write src/",
     "format": "biome format --write src/"
   },
   "dependencies": {
-    "@mysten/sui": "^1.21.0",
-    "@mysten/suins": "^0.6.0",
-    "@mysten/walrus": "^0.9.0"
+    "@cetusprotocol/cetus-sui-clmm-sdk": "^5.4.0",
+    "@cmdoss/walrus-site-builder": "^2.6.3",
+    "@interest-protocol/sui-sdk": "^8.2.0",
+    "@interest-protocol/vortex-sdk": "^11.2.0",
+    "@mysten/seal": "^0.9.6",
+    "@mysten/sui": "^1.45.2",
+    "@mysten/suins": "0.9.13",
+    "@mysten/walrus": "^0.9.0",
+    "@mysten/walrus-wasm": "^0.2.0",
+    "@tradeport/sui-trading-sdk": "^0.4.53"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.0",
-    "@cloudflare/workers-types": "^4.20250109.0",
-    "typescript": "^5.7.0",
-    "wrangler": "4"
+    "@biomejs/biome": "2.3.11",
+    "@cloudflare/workers-types": "^4.20260116.0",
+    "@types/bun": "^1.3.6",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.59.2"
   }
 }
