Integrate Ika SDK for Passkey Wallet functionality
- Added new passkey wallet feature utilizing Ika's 2PC-MPC for secure threshold signatures.
- Updated package dependencies to include @ika.xyz/sdk and related packages.
- Modified wrangler.toml for mainnet messaging contract address.
- Enhanced profile page event listeners for improved robustness.
- Introduced PWA support with manifest and service worker for better app experience.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@cetusprotocol/cetus-sui-clmm-sdk": "^5.4.0",
     "@cmdoss/walrus-site-builder": "^2.6.3",
+    "@ika.xyz/sdk": "^0.2.7",
     "@interest-protocol/sui-sdk": "^8.2.0",
     "@interest-protocol/vortex-sdk": "^11.2.0",
     "@mysten/messaging": "^0.1.0",
