Add payment kit dependency and enhance profile grace period display
- Introduced the `@mysten/payment-kit` dependency in `package.json` and `bun.lock` for payment functionalities.
- Added new CSS styles for grace skill counter and status display, improving visual presentation.
- Implemented logic for gifting renewal during grace periods, enhancing user interaction and experience.
- Updated profile handler to manage grace period actions and display relevant information dynamically.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@interest-protocol/sui-sdk": "^8.2.0",
     "@interest-protocol/vortex-sdk": "^11.2.0",
     "@mysten/messaging": "^0.1.0",
+    "@mysten/payment-kit": "^0.0.20",
     "@mysten/seal": "^0.9.6",
     "@mysten/sui": "^1.45.2",
     "@mysten/suins": "0.9.13",
