--- a/wrangler.toml
+++ b/wrangler.toml
@@ -29,3 +29,7 @@ MESSAGING_CONTRACT_ADDRESS = "0x9a814ab4f67fff8ec2a8bb1ddcf188b26119ae6866eea9f3
 [[kv_namespaces]]
 binding = "CACHE"
 id = "c0054cf22c6a4daa99cb36347fa5229c"
+
+# Scheduled triggers for claim processing
+[triggers]
+crons = ["* * * * *"]  # Every minute
