Add gRPC backend proxy for high-performance Sui RPC
New handler at /grpc with API endpoints:
- GET /api/grpc/status - Health check and configuration
- POST /api/grpc/rpc - JSON-RPC passthrough (single or batch)
- POST /api/grpc/objects - Multi-get objects convenience wrapper
- POST /api/grpc/events - Query events
- POST /api/grpc/owned-objects - Get owned objects
- POST /api/grpc/dynamic-fields - Get dynamic fields
- GET /api/grpc/suins/resolve - Resolve SuiNS name
- POST /api/grpc/execute - Execute transaction
- POST /api/grpc/dry-run - Dry run transaction

Architecture: Worker → gRPC Backend → Sui Fullnode
Benefits: Binary efficiency, HTTP/2 multiplexing, connection pooling

Configure via secrets:
- GRPC_BACKEND_URL: HTTP endpoint for gRPC translation
- GRPC_BACKEND_API_KEY: Optional authentication

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,6 +25,13 @@ MESSAGING_CONTRACT_ADDRESS = "0x9a814ab4f67fff8ec2a8bb1ddcf188b26119ae6866eea9f3
 #   If not set, anyone can use AI features (payment still required)
 # Note: Payments automatically go to the alias.sui address (target address of the SuiNS name)
 
+# gRPC Backend Proxy Configuration
+# Set backend URL as secret: wrangler secret put GRPC_BACKEND_URL
+# Set API key as secret: wrangler secret put GRPC_BACKEND_API_KEY
+# GRPC_BACKEND_URL - HTTP endpoint that translates to gRPC calls (e.g., https://grpc.example.com)
+# GRPC_BACKEND_API_KEY - Optional: API key for backend authentication
+# Benefits: Binary protocol efficiency, HTTP/2 multiplexing, connection pooling
+
 # KV namespace for caching resolved names
 [[kv_namespaces]]
 binding = "CACHE"
