--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sui-ski-gateway",
   "version": "0.1.0",
-  "description": "Cloudflare gateway for Sui ecosystem - SuiNS, Move Registry, and decentralized content resolution",
+  "description": "Cloudflare gateway for Sui ecosystem - Core SuiNS name resolution",
   "type": "module",
   "scripts": {
     "dev": "wrangler dev",
@@ -16,18 +16,9 @@
     "format": "biome format --write src/"
   },
   "dependencies": {
-    "@cetusprotocol/cetus-sui-clmm-sdk": "^5.4.0",
-    "@cmdoss/walrus-site-builder": "^2.6.3",
-    "@ika.xyz/sdk": "^0.2.7",
-    "@interest-protocol/sui-sdk": "^8.2.0",
-    "@interest-protocol/vortex-sdk": "^11.2.0",
-    "@mysten/messaging": "^0.1.0",
-    "@mysten/payment-kit": "^0.0.20",
-    "@mysten/seal": "^0.9.6",
     "@mysten/sui": "^1.45.2",
     "@mysten/suins": "0.9.13",
-    "@mysten/walrus": "^0.9.0",
-    "@mysten/walrus-wasm": "^0.2.0"
+    "@mysten/walrus": "^0.9.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
