--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,7 +12,7 @@ routes = [
 # Environment variables (non-sensitive)
 [vars]
 SUI_NETWORK = "mainnet"
-SUI_RPC_URL = "https://fullnode.mainnet.sui.io:443"
+SUI_RPC_URL = "https://sui-rpc.publicnode.com"
 WALRUS_NETWORK = "mainnet"
 
 # KV namespace for caching resolved names
