--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@mysten/sui": "^2.2.0",
     "@mysten/suins": "^1.0.0",
     "@mysten/walrus": "^0.9.0",
-    "@noble/hashes": "^2.0.1"
+    "@noble/hashes": "^2.0.1",
+    "hono": "^4.11.7"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@cloudflare/workers-types": "^4.20260116.0",
     "@types/bun": "^1.3.6",
     "typescript": "^5.9.3",
-    "wrangler": "^4.62.0"
+    "wrangler": "^4.63.0"
   }
 }
