--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@bufbuild/protobuf": "^2.11.0",
     "@connectrpc/connect-web": "^2.1.1",
     "@mysten/deepbook-v3": "^1.0.1",
+    "@mysten/seal": "^1.0.0",
     "@mysten/sui": "^2.2.0",
     "@mysten/suins": "^1.0.0",
     "@mysten/walrus": "^0.9.0",
     "@noble/hashes": "^2.0.1",
-    "hono": "^4.11.7"
+    "hono": "^4.11.7",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@cloudflare/workers-types": "^4.20260116.0",
+    "@playwright/test": "^1.58.2",
     "@types/bun": "^1.3.6",
     "typescript": "^5.9.3",
     "wrangler": "^4.63.0"
