✨ feat: grace period vaults, sol swap, flash loans, jacket factory, and x402 upgrades
- Add grace period vault system with encrypted bookmarks and agent handler
- Add SOL/SUI swap handler and price utilities
- Add flash loan execution contract
- Add jacket factory auto-minting contract
- Add grace registration Move module for bounty escrow
- Upgrade x402 middleware with enhanced payment verification
- Redesign profile page CSS with expanded styles
- Improve wallet session client and durable object
- Remove black diamond feature (replaced by vault system)
- Add Playwright config for e2e testing
- Update .gitignore for Move build artifacts and test results
- Add AGENTS.md and CODEBASE_GUIDE.md documentation

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,14 @@ Thumbs.db
 # Logs
 *.log
 
+# Move build artifacts
+**/build/*/bytecode_modules/
+**/build/*/debug_info/
+**/build/*/sources/
+
+# Test results
+test-results/
+
 # Test/dev assets
 pilled-site/
 ragtag-images/
