--- a/package.json
+++ b/package.json
@@ -1,38 +1,43 @@
 {
-  "name": "sui-ski-gateway",
-  "version": "0.1.0",
-  "description": "Cloudflare gateway for Sui ecosystem - Core SuiNS name resolution",
-  "type": "module",
-  "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
-    "tail": "wrangler tail",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "set:contenthash": "bun run scripts/set-suins-contenthash.ts",
-    "typecheck": "tsc --noEmit",
-    "lint": "biome check src/",
-    "lint:fix": "biome check --write src/",
-    "format": "biome format --write src/"
-  },
-  "dependencies": {
-    "@bufbuild/protobuf": "^2.11.0",
-    "@connectrpc/connect-web": "^2.1.1",
-    "@mysten/deepbook-v3": "^1.0.1",
-    "@mysten/seal": "^1.0.0",
-    "@mysten/sui": "^2.2.0",
-    "@mysten/suins": "^1.0.0",
-    "@mysten/walrus": "^0.9.0",
-    "@noble/hashes": "^2.0.1",
-    "hono": "^4.11.7",
-    "tiny-invariant": "^1.3.3"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.11",
-    "@cloudflare/workers-types": "^4.20260116.0",
-    "@playwright/test": "^1.58.2",
-    "@types/bun": "^1.3.6",
-    "typescript": "^5.9.3",
-    "wrangler": "^4.63.0"
-  }
+	"name": "sui-ski-gateway",
+	"version": "0.1.0",
+	"description": "Cloudflare gateway for Sui ecosystem - Core SuiNS name resolution",
+	"type": "module",
+	"scripts": {
+		"dev": "wrangler dev",
+		"deploy": "wrangler deploy",
+		"tail": "wrangler tail",
+		"test": "bun test",
+		"test:watch": "bun test --watch",
+		"set:contenthash": "bun run scripts/set-suins-contenthash.ts",
+		"obsidian:daily": "bun run scripts/obsidian.ts daily",
+		"obsidian:git": "bun run scripts/obsidian.ts git",
+		"obsidian:progress": "bun run scripts/obsidian.ts progress",
+		"obsidian:open": "bun run scripts/obsidian.ts open",
+		"obsidian:all": "bun run scripts/obsidian.ts all",
+		"typecheck": "tsc --noEmit",
+		"lint": "biome check src/",
+		"lint:fix": "biome check --write src/",
+		"format": "biome format --write src/"
+	},
+	"dependencies": {
+		"@bufbuild/protobuf": "^2.11.0",
+		"@connectrpc/connect-web": "^2.1.1",
+		"@mysten/deepbook-v3": "^1.0.1",
+		"@mysten/seal": "^1.0.0",
+		"@mysten/sui": "^2.2.0",
+		"@mysten/suins": "^1.0.0",
+		"@mysten/walrus": "^0.9.0",
+		"@noble/hashes": "^2.0.1",
+		"hono": "^4.11.7",
+		"tiny-invariant": "^1.3.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.11",
+		"@cloudflare/workers-types": "^4.20260116.0",
+		"@playwright/test": "^1.58.2",
+		"@types/bun": "^1.3.6",
+		"typescript": "^5.9.3",
+		"wrangler": "^4.63.0"
+	}
 }
