--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "wrangler dev",
-		"deploy": "wrangler deploy",
+		"deploy": "npx wrangler deploy",
 		"tail": "wrangler tail",
 		"test": "bun test",
 		"test:watch": "bun test --watch",
