--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
 	"dependencies": {
 		"@bufbuild/protobuf": "^2.11.0",
 		"@connectrpc/connect-web": "^2.1.1",
+		"@modelcontextprotocol/sdk": "^1.26.0",
 		"@mysten/deepbook-v3": "^1.0.1",
 		"@mysten/seal": "^1.0.0",
 		"@mysten/sui": "^2.2.0",
 		"@mysten/suins": "^1.0.0",
 		"@mysten/walrus": "^0.9.0",
 		"@noble/hashes": "^2.0.1",
+		"@x402/core": "^2.3.1",
+		"@x402/hono": "^2.3.0",
+		"@x402/mcp": "^2.3.0",
+		"agents": "^0.4.1",
 		"hono": "^4.11.7",
 		"tiny-invariant": "^1.3.3"
 	},
