--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
 		"@playwright/test": "^1.58.2",
 		"@types/bun": "^1.3.6",
 		"typescript": "^5.9.3",
-		"wrangler": "latest"
+		"wrangler": "^4.65.0"
 	}
 }
