--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
 		"@mysten/suins": "^1.0.0",
 		"@mysten/walrus": "^0.9.0",
 		"@noble/hashes": "^2.0.1",
+		"agents": "^0.4.1",
 		"hono": "^4.11.7",
 		"tiny-invariant": "^1.3.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
 		"@cloudflare/workers-types": "^4.20260116.0",
+		"@ika.xyz/sdk": "^0.2.7",
 		"@playwright/test": "^1.58.2",
 		"@types/bun": "^1.3.6",
 		"typescript": "^5.9.3",
